mjs 3.0-rc2
 * It is now possible to type the first letters of a directory to jump
   to it.
 * Fixed algorithm which makes sure a song is not added twice to the
   playlist.
 * Fixed playlist saving (now uses the correct .mjs extension)
 * More code cleanups
mjs 3.0-rc1
 * Code cleanups
 * Minor change to config-file format (background colors)
 * Background color use fixed
 * Fixed color configuration (Bug has lived a long time unnoticed...)
 * Fixed ugly borders in xterm
 * Removed starting / in front of directories
mjs 2.9.9
 * Code Cleanups
 * Fixed artist field being 1 character to long (containing garbage)
mjs 2.9.8 (cvs + release):
 * Artist and album info are extracted from the directory structure.
   Hopefully this will cause less problems than id3-tags.
 * Added intro mp3, because mpg123 has problems playing some files
   with id3v2 tags as first song.
 * Removed some references to mms, the first line of playlists
   must now contain mjs instead of mms.
mjs 2.9.7 (cvs):
 * removed al id3-tag code once again. Bugs in mplib cause to many problems
mjs 2.9.6 (not in cvs):
 * Now using mplib for id3-tags
mjs 2.9.5 (not in cvs):
 * Some bugfixes to id3-tag code
mjs 2.9.4 (cvs):
 * Fixed mjsrc.EXAMPLE The bottomline error message about ~/.mjsrc not
   existing while it does, should be solved.
mjs 2.9.3 (not in cvs):
 * read_mp3_list_file now returns wlist, so files->tail will not be NULL any
   more and playlists wont segfault when end is pressed
mjs 2.9.2 (cvs) :
 * Added config option for output device choosing
 * Added posibility to go into a linked playlist directory outside your
   mp3path directory e.g. in your home dir
 * Fixed playlist loading to playlist window
mjs 2.9.1 (cvs) :
 * Bottomline text is always centered
 * Code cleanups
 * moved bottomlinetext to menubar title.default in config file
 * Showing of relative path in the files window possible
 * Added some consistency checks to id3 part to avoid division by zero 
mjs 2.9 :